--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
  This is my app, Mi sada menjamo ovaj file, menjamo Ponovo menjamo.
+
+ Test 2.
  <!-- OPTIMIZE:  -->
 </body>
 </html>
