--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 <body>
  This is my app, Mi sada menjamo ovaj file, menjamo Ponovo menjamo.
  <!-- OPTIMIZE:  -->
+ login form
+
+ </form>
 </body>
 </html>
