--- a/index.html
+++ b/index.html
@@ -59,6 +59,70 @@
 
 </table>
 
+<table width="250" border="10">
+
+<caption>Tabela 2</caption>
+<tr>
+<td rowspan="2">Ivana</td>
+<td rowspan="5"> ANA</td>
+<td>Marija</td>
+<td>Zorana</td>
+<td>Sava</td>
+</tr>
+
+<tr>
+   <td>Ivana</td>
+   <td>Andjela</td>
+   <td>Isidora</td>
+   
+
+</tr>
+
+<tr>
+   <td>Sanja</td>
+   <td>Slavica</td>
+   <td>Aca</td>
+   <td>Tea</td>
+   </tr>
+
+   <tr>
+      <td>Bojan</td>
+      <td>Ivan</td>
+      <td>Goran</td>
+      <td>Mia</td>
+      </tr>
+>
+<tr>
+   <td>Una</td>
+   <td>Lana</td>
+   <td>Ika</td>
+   <td>Ilija</td>
+   </tr>
+</table> </br>
+
+
+<form>
+<label>First name:<input type="text" maxlength="25"/><br/></label>
+<label>Last name:<input type="text" maxlength="25"/><br/></label>
+<label>Password:<input type="password" maxlength="20"/><br/></label>
+JavaScript<input type="checkbox"><br/>
+Html<input type="checkbox"><br/>
+Css<input type="checkbox"><br/>
+Yes<input type="radio"><br/>
+No<input type="radio"><br/>
+
+<textarea rows="15" cols="20">
+   <p><strong>Lorem</strong> ipsum dolor sit amet, consectetur adipiscing elit, 
+      sed do eiusmod tempor incididunt ut labore</br> et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. <em>Duis aute irure dolor</em> in reprehenderit in voluptate velit esse cillum dolore 
+      eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,</br> sunt in culpa qui
+      officia deserunt mollit anim id est laborum.</p></p>
+</textarea></br>
+
+<a href="https://www.youtube.com/watch?v=u3dmwXDL-90" >Le poussin piou</a>
+</form>
+
 
 </body>
 </html>
