--- a/Vezba.html
+++ b/Vezba.html
@@ -5,8 +5,19 @@
 </head>
 <body>
 
-   
+   <header>
+       <div class="container">
+    <nav>
+        <ul>
+            <li><a href="https://www.enmongroup.com/podrska">Home</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </nav>
+    </div>
+    </header>
 <div id="wrapper">
 
 <div id="header">
